--- a/server/views/register.pug
+++ b/server/views/register.pug
@@ -1,6 +1,6 @@
 extends layout
 block content
-  form(action="/register" method="post")
+  form(action="/api/register" method="post")
     div
         label Username:
         input(type="text" name="UserName")
