--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -1,6 +1,6 @@
 extends layout
 block content
-  form(action="/login" method="post")
+  form(action="/api/login" method="post")
     div
         label Username:
         input(type="text" name="username")
